tests/neg/semantic_break_outside.baa
// EXPECT: [Semantic Error]
// EXPECT: 'break' used outside
صحيح الرئيسية() {
    توقف.
    إرجع 0.
}
